# gnome-builder

./: configure.ac
data/keybindings/: default.css
libide/: Makefile.am  ide-types.h  ide.h
libide/buildsystem/: ide-build-log-private.h  ide-build-log.c  ide-build-pipeline.c  ide-build-pipeline.h  ide-build-stage-launcher.c  ide-build-stage-launcher.h  ide-build-stage-mkdirs.c  ide-build-stage-private.h  ide-build-stage.c  ide-build-stage.h  ide-buildconfig-configuration-provider.c  ide-configuration-manager.c  ide-configuration-provider.c  ide-configuration-provider.h  ide-configuration.c  ide-configuration.h
libide/buildui/: ide-build-log-panel.c  ide-build-log-panel.h  ide-build-panel.c  ide-build-panel.h  ide-build-tool.c  ide-build-workbench-addin.c
libide/editor/: ide-editor-frame-actions.c  ide-editor-view.c
libide/resources/: libide.gresource.xml
libide/sourceview/: ide-source-view.c
libide/subprocess/: ide-subprocess-launcher.c
libide/transfers/: ide-transfer-manager.c
libide/util/: ide-task.c  ide-task.h
plugins/: Makefile.am
plugins/autotools/: Makefile.am  ide-autotools-pipeline-addin.c
plugins/flatpak/: Makefile.am  gbp-flatpak-configuration-provider.c  gbp-flatpak-pipeline-addin.c  gbp-flatpak-plugin.c  gbp-flatpak-prepare-stage.c  gbp-flatpak-runtime.c  gbp-flatpak-transfer.c  gbp-flatpak-transfer.h
plugins/meson/: Makefile.am  configure.ac  meson.plugin  meson_build.py
plugins/rustup/: Makefile.am
plugins/rustup/gsettings/: org.gnome.builder.plugins.rustup.gschema.xml
plugins/rustup/rustup_plugin/: __init__.py
po/: POTFILES.in
tests/: Makefile.am
