SUBDIRS = \
	autotools \
	build-tools \
	clang \
	command-bar \
	contributing \
	c-pack \
	create-project \
	ctags \
	devhelp \
	file-search \
	fpaste \
	gcc \
	gettext \
	git \
	gnome-code-assistance \
	html-completion \
	html-preview \
	jedi \
	jhbuild \
	library-template \
	project-tree \
	python-gi-imports-completion \
	meson \
	mingw \
	python-pack \
	support \
	symbol-tree \
	sysmon \
	terminal \
	todo \
	vala-pack \
	xdg-app \
	xml-pack \
	$(NULL)

EXTRA_DIST = Makefile.plugin

-include $(top_srcdir)/git.mk
